--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "playwright": "^1.40.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
@@ -24,7 +24,7 @@
     "eject": "react-scripts eject",
     "e2e": "npx playwright test",
     "lint": "npx eslint --ext .jsx,.js src --fix",
-    "prepare": "husky install" 
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -50,8 +50,8 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1"
   },
-  "husky":{
-    "hooks":{
+  "husky": {
+    "hooks": {
       "pre-commit": "npm run lint"
     }
   }
